# cardinal-glue

./: README.md  pyproject.toml
cardinal_glue/: __init__.py  core.py  filesystem.py  firestore.py
cardinal_glue/auth/: core.py  googleauth.py
cardinal_glue/cap_api/: cap.py  capauth.py
cardinal_glue/qualtrics_api/: qualtricsauth.py  surveys.py  xm.py
cardinal_glue/workgroup_api/: workgroup.py  workgroupauth.py
